// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors if the event has no s3 object key 1`] = `
"[
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "detail",
      "s3ObjectDetails",
      "objectKey"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]"
`;

exports[`errors if the event has no s3 version id 1`] = `
"[
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "detail",
      "s3ObjectDetails",
      "versionId"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]"
`;

exports[`errors if the event has no virus scan status 1`] = `
"[
  {
    "code": "invalid_value",
    "values": [
      "THREATS_FOUND",
      "UNSUPPORTED",
      "ACCESS_DENIED",
      "FAILED"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid option: expected one of \\"THREATS_FOUND\\"|\\"UNSUPPORTED\\"|\\"ACCESS_DENIED\\"|\\"FAILED\\""
  }
]"
`;

exports[`errors if the event has virus scan status NO_THREATS_FOUND 1`] = `
"[
  {
    "code": "invalid_value",
    "values": [
      "THREATS_FOUND",
      "UNSUPPORTED",
      "ACCESS_DENIED",
      "FAILED"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid option: expected one of \\"THREATS_FOUND\\"|\\"UNSUPPORTED\\"|\\"ACCESS_DENIED\\"|\\"FAILED\\""
  }
]"
`;
